# codepad

./: cpydiffdroid.py
opencv_test/: CMakeLists.txt  main.cpp
